update final write up

--- a/jupyter-notebooks/dino_popgen_final_writeup.ipynb
+++ b/jupyter-notebooks/dino_popgen_final_writeup.ipynb
@@ -97,9 +97,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Samtools and bcftools (both version 1.4.1) were installed and used to further process the sequences. All sam files were converted to bam format in order to save space on the HPC. \n",
+    "Samtools and bcftools (both version 1.4.1) were installed and used to further process the sequences. \n",
     "\n",
-    "<i>Caroline can you add some more detail to this section about the samtools workflow?</i>"
+    "Samtools view was used to convert sam files to bam format in order to save space on the HPC. Then, the .bam files were sorted and indexed so the PCR duplicates could be removed with samtools rmdup. Now that duplicates are removed, this .bam file was used in downstream analyses. Additioanlly, the .bam files were indexed again and samtools flagstat used to calculate alignment statistics. \n",
+    "**Add part about python code to run through stats?**"
    ]
   },
   {
@@ -116,7 +117,7 @@
     "        samtools rmdup /vortexfs1/omics/env-bio/collaboration/dino_popgen/data/align-data/$seq.sorted.bam /vortexfs1/omics/env-bio/collaboration/dino_popgen/data/align-data/$seq.nodups.bam\n",
     "        samtools index -b /vortexfs1/omics/env-bio/collaboration/dino_popgen/data/align-data/$seq.nodups.bam\n",
     "        samtools flagstat /vortexfs1/omics/env-bio/collaboration/dino_popgen/data/align-data/$seq.nodups.bam > $seq.align.stats.txt\n",
-    "done\n"
+    "done"
    ]
   },
   {
@@ -193,7 +194,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selection"
+    "## Selection\n",
+    "\n",
+    "Both PCAdapt and BayeScan were used to identify SNPs under selection. "
    ]
   }
  ],
