small edits to commenting

--- a/jupyter-notebooks/figure-3_EF.ipynb
+++ b/jupyter-notebooks/figure-3_EF.ipynb
@@ -21,7 +21,6 @@
     "'''\n",
     "#remove the filepaths and extensions from sample names \n",
     "sed 's/.nodups.bam//g' raxml_output.raxml.support | sed 's|/vortexfs1/omics/env-bio/collaboration/dino_popgen/data/align-data/||g' > raxml_rename.bestTree\n",
-    "rm raxml_cp.bestTree #check output and delete copy\n",
     "cut -d , -f 2,22 ../../supp_table_subset.csv | tr -d '\"' > SRR_SampleID.csv #cut the SRR and SID fields from supplementary table, remove commas and create a csv\n",
     "'''"
    ]
@@ -113,7 +112,7 @@
    "source": [
     "# read in csv \n",
     "SampleID = pd.read_csv(\"../output/phylogeny/raxml_output/SRR_SampleID.csv\")\n",
-    "SampleID.head("
+    "SampleID.head()"
    ]
   },
   {
