added phylogeny writeup

--- a/jupyter-notebooks/dino_popgen_final_writeup.ipynb
+++ b/jupyter-notebooks/dino_popgen_final_writeup.ipynb
@@ -6,15 +6,14 @@
    "source": [
     "# OVERVIEW\n",
     "\n",
-    "All three figures and corresponding outputs support the general conclusions of Reich et al. 2021. Out PCA broadly separated groups by coral host, the phylogeny grouped out by host, and the selction analysis yielded outliers on the same order of magnitude as that of the paper. \n",
-    "However, the conlcusions of our outputs are not quite as strong. There was more overlap in the PCA between groups and there were weaker bootstrap values in the phylogeny, especially at the base of the tree. In addition, *A. cervicornis* symbionts were not monophyletic (as they were in the Reich et al. analysis). Both of our analyses for outliers identified more SNPs compared to the original analysis. \n",
+    "All three figures and corresponding outputs support the general conclusions of Reich et al. 2021. Our PCA broadly separated groups by coral host taxa rather than sampling location, the phylogeny grouped out by host, and the selction analysis yielded outliers on the same order of magnitude as that of the paper. However, the conclusions of our outputs are not quite as strong. There was more overlap in the PCA between groups and there were weaker bootstrap values in the phylogeny, especially at the base of the tree. In addition, *A. cervicornis* symbionts were not monophyletic (as they were in the Reich et al. analysis). Both of our analyses for outliers identified more SNPs compared to the original analysis. \n",
     "\n",
-    "After trying to replicate the methods in Reich et al. 2021, we feel that a paper's reproducibility depends heavily on the audience. There were aspects of these methods that may have been clear to someone familiar with the field, but were confusing for us. The lack of a pipeline also created significant opportunity for divergence. There were multiple places in the analysis where we had to make assumptions or even guesses to continue."
+    "After trying to replicate the methods in Reich et al. 2021, we feel that a paper's reproducibility depends heavily on the audience. There were aspects of these methods that may have been clear to someone familiar with the field, but were confusing for us. The lack of a pipeline also created significant opportunity for divergence. There were multiple places in the analysis where we had to make assumptions or even guesses to continue, which likely contributes greatly to the final differences that we report here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +98,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the phylogeny, while seemingly simple, ended up being an incredibly challenging process due to one huge roadblock...the step for transitioning from variant calls to multiple sequence alignment was not detailed in the manuscript or paper github, so we had to identify our own method for this. The package we ultimately used, vcfkit, was one of the only straightforward tools found online to achieve this, but was (for some reason) impossible to install on the HPC initially (days-long “Solving Environment” message, glibc error, etc.). Several other approaches were identified, but all proved unhelpful for various reasons:\n",
+    "\n",
+    "* vcflib – Required individual-sample vcf files, output logfiles were all blank and unhelpful for troubleshooting. (https://github.com/vcflib/vcflib)  \n",
+    "* vcf2msa – This was a wrapper file downloaded from github, ran in python but also yielded bugs and incomplete documentation made it challenging to troubleshoot. (https://github.com/tkchafin/vcf2msa.py)  \n",
+    "* gatk4 – This approach was the most promising, as the FastaAlternateReferenceMaker function can take a vcf and create a fasta sequence for alignment. However, this approach required the final vcf to be split into individual sample vcfs and indexed. Significant time was spent getting gatk to work (initial installation trouble, then loaded the gatk module directly from HPC, then realized that we actually needed gatk4 to access   FastaAlternateReferenceMaker which needed to be downloaded from bioconda). While we were able to generate final fasta files for each sample using this approach, the resulting files used the entire original reference, making them millions of base pairs long and not appropriate for use in alignment.\n",
+    "* vcftools consensus – Similar to gatk, this output was not actually what we were looking for.\n",
+    "\n",
+    "Ultimately, vcfkit was installed successfully by an alternate HPC user (shoutout to Cory Berger!) and the phylo function was used to create the fasta file for alignment.\n",
+    "\n",
+    "Filtering for sites with no missing data (100% coverage across samples) yielded 5,568 high-quality SNPs; this is 18% less than the 6,813 conservative SNPs identified in the paper. The reduction in total SNPs identified could be an artifact from leaving large/deep sequences out of the analysis, or it could be a result of an inconsistency in variant calling (see additional discussion below).  Similar to the PCA analysis, symbionts clustered phylogenetically based on coral host rather than sample location, with hybrid symbionts grouped in between A. cervicornis and A. palmata symbionts. However, we found that bootstrap values were much weaker in the reproduced analysis. The original paper had 16 branches with bootstrap support values >50, whereas our final analysis had only 4 branches that were supported at >50. Of these, the highest bootstrap support value was 86, compared to 100 in the manuscript. Furthermore, our most confident bootstrap values were placed farther out along the branches, there is less support for differentiation at the base of the unrooted tree.¬ A major finding of the phylogeny analysis in the original paper was that A. cervicornis symbionts were monophyletic, this was not observed in the reanalysis.\n",
+    "\n",
+    "A concerning result, noticed in the fasta alignment of the sample sequences (vcfkit output), is that not all aligned nucleotides appear to actually be SNPs. There are many locations where all samples have the same nucleotide called. Looking back through our code and comparing our variant counts with the manuscript, it appears that the divergence which caused this issue may have occurred in the bcftools view step, although we used all flags and parameters outlined in the paper/github. If we were to rerun the analysis again, we would want to set stricter filters for SNPs (likely using a different program such as GATK) and validate that they were accurately called. This hiccup in analysis likely explains some of the divergence between expected and reproduced results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -112,12 +130,21 @@
     }
    ],
    "source": [
+    "# original phylogeny\n",
     "display_png(file=\"../figures/Fig3_original_Reich2021.png\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure 3 from the paper\n",
+    "This is the phylogeny taken directly from Reich et al, the phylogeny was visualized in iTOL, but based in the formatting it appears that annotation and colors/symbols were added manually. Color indicates host taxa (A. cervicornis, A. palmata, or hybrid) and symbol indicates sample origin. Only bootstrap values >50 are displayed."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +161,16 @@
     }
    ],
    "source": [
+    "# reproduced phylogeny\n",
     "display_png(file=\"../figures/Fig3_phylogeny_EF_edit.png\", height=800, width=800)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure 3 Reproduced\n",
+    "This is the best tree identified by RAxML-NG and visualized online with iTOL. Code for creation are located in /scripts/phylogeny and in /jupyter/figure-3_EF.ipynb."
    ]
   },
   {
@@ -178,7 +214,7 @@
    "metadata": {},
    "source": [
     "### Figure 5 from the paper\n",
-    "This is the manhattan plot taken directly from Reich et al. See the figure below for our manhatta plot."
+    "This is the manhattan plot taken directly from Reich et al. See the figure below for our manhattan plot."
    ]
   },
   {
