tried one more reformat on Fig 3

--- a/jupyter-notebooks/dino_popgen_final_writeup.ipynb
+++ b/jupyter-notebooks/dino_popgen_final_writeup.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
    "metadata": {},
    "source": [
     "### Figure 3 Reproduced\n",
-    "**This is the best tree identified by RAxML-NG and visualized online with iTOL. Code for creation are located in /scripts/phylogeny and in /jupyter/figure-3_EF.ipynb.**"
+    "**This is the best tree identified by RAxML-NG and visualized online with iTOL. Code for creation are located in /scripts/phylogeny and in /jupyter/figure-3_EF.ipynb. Note: this figure doesn't seem to be appearing in the github, but should be visible if you open the jupyter notebook directly.**"
    ]
   },
   {
